# FinceptTerminal

./: .cirrus.yml  .dockerignore  .env  .gitattributes  .gitignore  .mcp.json  .pdm-python  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMIT_MSG.txt  CONTRIBUTING.md  DELIVERY_SUMMARY.txt  Dockerfile  LICENSE  LICENSE, com  MANIFEST.in  README.de.md  README.es.md  README.fr.md  README.hi.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  SECURITY.md  TURKISH_MARKETS_README.md  ZERODHA_TYPESCRIPT_ADAPTER_SKELETON.ts  back.txt  build-windows-local.bat  build.txt  cli.spec  fincept.bat  funding.json  installer.iss  openapi.json  optimized funding.json  package-lock.json  package.json  portfolio-analyst-agent.json  (+15 more)
fincept-cpp/: .clang-format  .clang-tidy  .cppcheck-suppress  .gitignore  CMakeLists.txt  CMakePresets.json  build.bat  build.sh  imgui.ini  vcpkg.json
fincept-cpp/.github/workflows/: build.yml
fincept-cpp/build-ninja/: CMakeCache.txt
fincept-cpp/docs/: openapi.json  placeholder.txt
fincept-cpp/docs/plans/: 2026-03-17-crypto-trading-high-value-features.md
fincept-cpp/resources/: requirements-numpy2.txt
fincept-cpp/scripts/: README.md  akshare_alternative.py  akshare_currency.py  akshare_derivatives.py  akshare_economics_china.py  akshare_reits.py  akshare_stocks_historical.py  akshare_stocks_holders.py  akshare_stocks_hot.py  bcb_data.py  bnm_data.py  bnr_data.py  boc_data.py  boi_data.py  build_akshare_symbols_db.py  cnb_data.py  congress_gov_data.py  country_codes_only.txt  databento_live.py  datagovsg_data.py  econdb_data.py  economic_calendar.py  edgar_mcp.py  edgar_tools.py  eia_data.py  faostat_data.py  fdic_fetcher.py  fetch_company_news.py  financial_report_generator.py  fred_data.py  hdx_data.py  hnb_data.py  ilostat_data.py  lint.sh  mnb_data.py  n2yo_satellite_data.py  nbp_data.py  norges_bank_data.py  openafrica_api.py  pxweb_fetcher.py  (+11 more)
fincept-cpp/scripts/Analytics/: README.md  financial_analysis_cli.py  technical_indicators.py
fincept-cpp/scripts/ai_quant_lab/: README.md  qlib_data_processors.py  qlib_meta_learning.py  qlib_reporting.py  qlib_rl.py  qlib_rolling_retraining.py  rd_agent_service.py
fincept-cpp/scripts/algo_trading/: __init__.py  backtest_engine.py  python_backtest_engine.py  scanner_engine.py
fincept-cpp/scripts/alpha_arena/: main.py
fincept-cpp/scripts/exchange/: broker_ws_bridge.py  cancel_order.py  exchange_client.py  fetch_funding_rate.py  fetch_mark_price.py  fetch_markets.py  fetch_orderbook.py  (+4 more)
fincept-cpp/src/: app.cpp  app.h  main.cpp
fincept-cpp/tests/: placeholder.txt  test_equity_ui.cpp
fincept-cpp/tmp/: 01_basic_layout.cpp  02_three_panel.cpp  03_nested_layout.cpp  04_responsive.cpp  05_common_mistakes.cpp  CMakeLists.txt  yoga_gui.cpp  yoga_playground.cpp
fincept-qt/: .clang-format  .clang-tidy  .clangd  .cppcheck-suppressions  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  CTempfincept_out.txt  DATAHUB_ARCHITECTURE.md  DATAHUB_PHASES.md  DESIGN_SYSTEM.md  _build_netspeed.bat  _build_phase4.bat  _build_phase7.bat  _build_voice.bat  agg.txt  analyze.py  build.bat  build2.bat  build_err.txt  build_log.txt  build_output.txt  build_run.bat  case_1816.json  compile_commands.json  cpp_refs.txt  fixscan.txt  orphans_by_dir.txt  py_files_rel.txt  results.txt  run-tidy-changed.sh  sc97597.json  setup_notes.txt  show_referenced.py  v2.txt
fincept-qt/.firecrawl/: qt6-debug.md
fincept-qt/build-tidy/: build.ninja  compile_commands.json
fincept-qt/cmake/: deploy_qt_once.cmake  phase_one_multiuser.cmake  prune_scripts_junk.cmake  sync_scripts.cmake
fincept-qt/docs/: ANGELONE_QT_CROSSCHECK.md  CRYPTO_CENTER_PHASE_2.md  CRYPTO_CENTER_PHASE_3.md  CRYPTO_CENTER_PHASE_4.md  CRYPTO_CENTER_PHASE_5.md  CRYPTO_WALLET_CONNECT.md  DATAHUB_TOPICS.md  DEBUGGING_CRASHES.md  MCP_TOOLS_GUIDE.md  backtesting-provider-process.md  polymarket_api_links.txt
fincept-qt/plans/: crypto-center-future-phases.md  crypto-center-phase-2.md  crypto-center-security-walkthrough.md  crypto-center-wallet-connect.md
fincept-qt/resources/: app.rc  app.rc.in  component_catalog.json  demo_portfolio.json  fincept.icns  requirements-numpy1.txt  requirements-numpy2.txt
fincept-qt/scripts/: ECONOMIC_DATA_SOURCES.md  README.md  REGIONAL_DATA_SOURCES.md  SATELLITE_GEO_DATA_SOURCES.md  STANDARDIZATION_GUIDE.md  STANDARDIZATION_SUMMARY.md  US_FINANCIAL_DATA_SOURCES.md  abs_data.py  acled_data.py  adb_data.py  adb_data_extended.py  afdb_data.py  aisstream_data.py  akshare_alternative.py  akshare_analysis.py  akshare_bonds.py  akshare_crypto.py  akshare_currency.py  akshare_data.py  akshare_derivatives.py  akshare_economics_china.py  akshare_economics_global.py  akshare_energy.py  akshare_funds_expanded.py  akshare_futures.py  akshare_index.py  akshare_macro.py  akshare_misc.py  akshare_news.py  akshare_reits.py  akshare_stocks_board.py  akshare_stocks_financial.py  akshare_stocks_funds.py  akshare_stocks_historical.py  akshare_stocks_holders.py  akshare_stocks_hot.py  akshare_stocks_margin.py  akshare_stocks_realtime.py  alpha_spread_data.py  alpha_vantage_extra_data.py  (+292 more)
fincept-qt/tests/: CMakeLists.txt  MarketSentimentSupportTest.cpp  test_minimax_integration.py  test_minimax_provider.py  test_terminalshell_platform_guards.py
fincept-qt/translations/: fincept_de_DE.ts  fincept_es_ES.ts  fincept_fr_FR.ts  fincept_id_ID.ts  fincept_it_IT.ts  fincept_pt_BR.ts  fincept_th_TH.ts  fincept_tr_TR.ts  fincept_vi_VN.ts  fincept_zh_CN.ts  fincept_zh_HK.ts  fincept_zh_TW.ts
fincept-qt/uitest/: CMakeLists.txt  theme01_obsidian.cpp  theme02_matrix.cpp  theme03_arctic.cpp  theme04_carbon.cpp  theme05_midnight.cpp  theme06_neon.cpp  theme07_slate.cpp  theme08_bloomberg.cpp  theme09_ember.cpp  theme10_titanium.cpp
fincept-terminal-desktop/src-tauri/: .gitignore  .taurignore  Cargo.toml  build-output.txt  build.rs  installer-hooks.nsh  pyoxidizer.bzl  relic.conf  scan_dependencies.py  sign-wrapper.bat  sign-wrapper.ps1  sign.bat  tauri.conf.json  tauri.microsoftstore.conf.json  test.rs
finscript/: Cargo.toml
finscript/src/: main.rs
(+13636 files in other folders)
