[project]
name = "fincept-terminal"
version = "1.0.10"
description = "A Terminal for Financial Market Analysis and Fetching all kinds of Data."
readme = "README.md"
authors = [
    { name = "Fincept Corporation", email = "dev@fincept.in" }
]
license = { text = "MIT" }
requires-python = ">=3.11,<3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "Pillow==11.2.1",
    "PyPDF2==2.12.1",
    "PyQt5==5.15.11",
    "datagovindia==1.0.2",
    "dearpygui==2.0.0",
    "feedparser==6.0.11",
    "fyers_apiv3==3.1.4",
    "numpy==2.2.6",
    "pandas==2.2.3",
    "psutil==7.0.0",
    "psycopg2==2.9.10",
    "pyaudio==0.2.14",
    "pyotp==2.9.0",
    "requests==2.31.0",
    "scholarly==1.7.11",
    "scipy==1.15.3",
    "ta==0.11.0",
    "uuid==1.30",
    "wikipedia==1.4.0",
    "yfinance==0.2.61",
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
fincept = "fincept_terminal.FinceptTerminalStart:start_terminal"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"